[package]
name = "is31fl32xx"
version = "0.1.0"
authors = ["Oliver Stenning <code@ostenning.com>"]
edition = "2021"
description = "A rust-embedded driver for the Lumissil Microsystems IS31FL3205 LED driver"
keywords = ["embedded-hal", "driver", "is31fl3237", "is31fl3205", "lumissil"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ostenning/is31fl32xx"

[dependencies]
embedded-hal = { version = "0.2.4", features = ["unproven"] }

[features]
default = []
