[package]
name = "is31fl32xx"
version = "0.1.1"
authors = ["Oliver <18360865+ost-ing@users.noreply.github.com>"]
edition = "2021"
description = "A rust-embedded driver for the Lumissil Microsystems IS31FL3205 LED driver"
keywords = ["embedded-hal", "driver", "is31fl3237", "is31fl3205", "lumissil"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ost-ing/is31fl32xx"

[dependencies]
embedded-hal = { version = "0.2.4", features = ["unproven"] }

[features]
default = []
